# config4k

./: .gitignore  .readthedocs.yaml  .travis.yml  404.html  BUILD.bazel  CONTRIBUTING.md  LICENSE  README.md  build.gradle  build.gradle.kts  codecov.yml  delegated-properties.html  index.html  install.html  mkdocs.yml  renovate.json  settings.gradle.kts  supported-types.html
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-test.yml  dependency-graph.yml  publish-releases.yml  publish-snapshots.yml  release-drafter.yml
api/: config4k.api
assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
assets/js/: just-the-docs.js  search-data.json
docs/: 404.html  Gemfile  _config.yml  index.html  index.md  install.md  params.json  requirements.txt  supported-types.md
docs/_includes/: head_custom.html
docs/usage/: delegated-properties.md  index.md
docs/usage/deserialization/: data-class.md  default-values.md  enum.md  index.md  map.md  nullable.md
docs/usage/serialization/: index.md  render-options.md  string.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/io.github.config4k/: Annotations.kt  Config4k.kt  Config4kException.kt  CustomType.kt  Extension.kt  GetConfigMap.kt  Reader.kt  TypeReference.kt
usage/: index.html
usage/deserialization/: data-class.html  default-values.html  enum.html  index.html  map.html  nullable.html
usage/serialization/: index.html  render-options.html  string.html
(+131 files in other folders)
