load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

licenses(["notice"])

kt_jvm_library(
    name = "config4k",
    srcs = glob(["src/main/**"]),
    deps = [
        "@javax_inject_javax_inject//jar",
        "@com_typesafe_config//jar"
    ],
    exports = [
        "@com_typesafe_config//jar"
    ],
    runtime_deps = [
        "@com_github_jetbrains_kotlin//:kotlin-reflect"
    ],
    visibility = ["//visibility:public"]
)
